Fix fdo#47669: also check if we started the tag before ending it

The problem is we created imbalance end tag </w:hyperlink> which shouldn't
be there. So, place a check before inserting end tag should help.

Inspired by (read: copied from) c1c2688912e769dfd7654e11e87dae380a8ce1eb ;)

Change-Id: Ic933f6da44c788cba48bb2fe6fa29658985310b6